# investment_agent

./: .env.example  .gitignore  ChatFunctionality.md  RDP-2.md  RDP-3.md  RDP-Agents.md  RDP.md  README.md  Technical_Product_Manager_Agent.md  example_usage.py  new-design.md  pyproject.toml  requirements.txt  revised-rdp.md  setup.py  todo.md
.github/: AIHandbook-llms-full.txt  AIHandbook-llms.txt
.github/prompts/: UI-UXExpertAgent.md
doc/: UI-Design.md  planning.md  system_architecture.md
doc/UI-design/: clarification-UI.md
doc/a-practical-guide-to-building-agents/: a-practical-guide-to-building-agents.md  a-practical-guide-to-building-agents_meta.json
nb/: test.ipynb
src/ai_agents/: __init__.py  agent_system.py  base_agent.py  market_data_agent.py  orchestrator.py  rent_estimation_agent.py  tools.py
src/ai_agents/guardrails/: __init__.py  agent_guardrails.py
src/ai_agents/i18n/: __init__.py  translation_service.py
src/ai_agents/memory/: __init__.py  agent_memory.py
src/ai_agents/orchestrator/: __init__.py  manager_agent.py  orchestrator.py
src/ai_agents/rag/: __init__.py  vector_store.py
src/ai_agents/specialized/: __init__.py  document_analysis_agent.py  market_data_agent.py  optimization_agent.py  rent_estimation_agent.py  risk_analysis_agent.py  strategy_agent.py
src/ai_agents/tools/: __init__.py  investment_tools.py
src/ai_agents/utils/: __init__.py  cost_tracker.py  langchain_utils.py
src/backend/: api.py  app.py
src/database/: database.py  models.py
src/frontend/: app.py  package-lock.json  package.json
src/frontend/src/: App.js
src/frontend/src/components/charts/: CashFlowChart.jsx  ROIChart.jsx
src/frontend/src/components/chat/: ChatInput.js  ChatInput.jsx  ChatInterface.jsx  ChatMessage.jsx  ChatMessageList.js  ChatSidebar.js
src/frontend/src/components/common/: DynamicForm.jsx  InfoBox.jsx  MarkdownView.jsx  MetricCard.jsx
src/frontend/src/components/features/: AnalyticsSection.js  ChatPanel.jsx  DocumentUpload.js  MetricsGrid.js  PropertyAnalysisDashboard.js  PropertyOverview.js  ScenarioComparison.js
src/frontend/src/components/layout/: AppLayout.jsx  ConversationalLayout.jsx  DashboardLayout.js  DashboardLayout.jsx  FloatingChatButton.jsx  Header.jsx  MainLayout.jsx  NavigationHeader.js  Sidebar.jsx  WelcomeLayout.jsx
src/frontend/src/components/property/: PropertyDetail.jsx  PropertyList.jsx
src/frontend/src/components/scenario/: ScenarioDetail.jsx
src/frontend/src/contexts/: AnalysisContext.jsx  ExpensesAndTaxContext.jsx  FinancingContext.jsx  FormFlowContext.jsx  PropertyContext.jsx  UnitsContext.jsx
src/frontend/src/pages/: ChatPage.jsx  ExpensesTaxPage.jsx  FinancingPage.jsx  HomePage.js  KnowledgeBase.jsx  MyScenarios.jsx  NewAnalysis.jsx  NotFound.jsx  PropertyInputPage.jsx  RentalUnitsPage.jsx  WelcomePage.jsx
src/frontend/src/services/: api.js
src/frontend/src/utils/: calculations.js  formatters.js  theme.js
src/utils/: financial_utils.py  metric_calculator.py  sse_updates.py
test_scripts/: test_azure_openai.py  test_enhanced_agent.py  test_investment_scenario.py  test_market_data.py  test_memory_system.py  test_risk_analysis_agent.py  test_vector_store.py
tests/unit/ai_agents/: test_agent_system.py  test_base_agent.py  test_iteration.py  test_market_data_agent.py  test_orchestrator.py  test_orchestrator_suggestions.py  test_rent_estimation_agent.py  test_tools.py
tests/unit/backend/: test_api.py  test_conversation_api.py
